--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/matchpanel.js": "/js/matchpanel.js",
+    "/js/details.js": "/js/details.js",
     "/js/basicMixin.js": "/js/basicMixin.js"
 }
